--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,3 +53,9 @@
     box-shadow:
         0px 0px 18px 4px rgba(0, 0, 0, 0.76)
 }
+.pdf-azardi {
+    padding: 5px;
+    /* border: 5px red dashed; */
+    box-shadow:
+        0px 0px 30px 4px rgba(255, 84, 0, 0.76)
+}
