--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,67 +1,9 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: auto;
-}
-
-.divider {
-    height: 30px;
-}
-
-.coluna {
-    display: inline-flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
-
-.titulo {
-    font-size: 36px;
-    padding: 2px;
-    border: 2px red dashed;
-}
-
-.subtitulo {
-    margin-left: 30px;
-    display: inline;
-    font-size: 28px;
-
-    padding: 2px;
-    border: 2px red dashed;
-}
-
-.conteudo {
-    margin-left: 60px;
-    margin-top: 10px;
-    padding: 10px;
-    border: 2px red dashed;
-    width: 400px;
-
-    font-size: 16px;
-}
-
-.pdf {
-    padding: 5px;
-    /* border: 5px red dashed; */
-    box-shadow:
-        0px 0px 18px 4px rgba(0, 0, 0, 0.76)
-}
-
-.pdf-azardi {
-    padding: 5px;
-    /* border: 5px red dashed; */
-    box-shadow:
-        0px 0px 30px 4px rgba(255, 84, 0, 0.76)
-}
-
-#the-canvas {
-    border: 1px solid black;
-    direction: ltr;
+.pdfobject-container {
+    height: 100vh;
+    width: 100vw;
 }
